public abstract class AFuelCar extends ACar {
    private int kmPrLitre;
    public String getFuelType(){
        return ""; //todo: remember to change
    }
    public int getKmPrLitre(){
        return 0; //todo remember to change
    }
    @Override
    public String toString(){
        return ""; //todo: remember to change
    }
}
