public class DieselCar extends AFuelCar{
    private boolean particleFilter;
    public boolean hasParticleFilter(){
        return false; //todo: remember to change
    }
    public int getRegistrationFee(){
        return 0; //todo: remember to change
    }
    @Override
    public String toString(){
        return ""; //todo: remember to change
    }
}
