public class ElectricCar extends ACar{
    private int batteryCapacity;
    private int maxRange;
    public int getBatteryCapacityKWh(){
        return 0; //todo: remember to change
    }
    public int getMaxRangeKm(){
        return 0; //todo: remember to change
    }
    public int getWhPrKm(){
        return 0; //todo: remember to change
    }
    public int getRegistrationFee(){
        return 0; //todo: remember to change
    }
    @Override
    public String toString(){
        return ""; //todo: remember to change
    }
}
