import java.util.ArrayList;

public class FleetOfCars {
    private ArrayList<Car> fleet;
    void addCar(Car car){};
    public int getTotalRegistrationFeeForFleet() {
        int total = 0;
        return total;
    }
    @Override
    public String toString(){
        return "";
    }
}
