public class GasolinCar extends AFuelCar {
    public int getRegistrationFee(){
        return 0; //todo: remember to change
    }
    @Override
    public String toString(){
        return ""; //todo: remember to change
    }
}
